--- a/package.json
+++ b/package.json
@@ -4,15 +4,11 @@
   "description": "server for game",
   "main": "index.js",
   "dependencies": {
-    "epress": "^0.0.1-security",
-    "http": "^0.0.0",
-    "pixi-viewport": "^4.4.1",
-    "socketio": "^1.0.0"
+    "express": "^4.17.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "author": "Paul Muller",
   "license": "ISC"
 }
