--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "server for game",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "socket.io": "^4.5.1"
   },
-  "devDependencies": {},
   "scripts": {},
   "author": "Paul Muller",
   "license": "ISC"
