--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
     "builds": [
       { "src": "./index.js", "use": "@vercel/node" }
+    ],
+    "headers" : [
+      {"key": "origin", "value" : "https://wild-water-world-client-side.vercel.app"}
+        
+      
     ]
   }
   
