--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
   },
-  "scripts": {},
+  "scripts": {
+    "run": "node index.js"
+  },
   "author": "Paul Muller",
   "license": "ISC"
 }
