--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "socket.io": "^4.5.1"
   },
   "scripts": {
-    "run": "node index.js"
+    "run": "node index.js",
+    "start": "node index.js"
   },
   "author": "Paul Muller",
   "license": "ISC"
